tests/compile_fail/invalid_template_value.rs
//! Test non-string template value error.

use angelscript::function;

#[function(template = 123)]
fn test_func() {}

fn main() {}
